package com.mymyka.npc;

import com.mymyka.player.Player;

public interface NPC {
    void sayHello(Player player);
}
