package com.mymyka.npc;

import com.mymyka.player.Player;

public interface Tradable {
    void startTradWith(Player player);
}
