package com.mymyka.player;

public interface Player {
    String getName();
}
